Removed inline styles because they are bad mkey

--- a/app/assets/css/parts/_player-overview.scss
+++ b/app/assets/css/parts/_player-overview.scss
@@ -79,6 +79,12 @@
 
   .player-hazard {
     display: inline-block;
+
+    > img {
+      display: inline-block;
+      vertical-align: -.1em;
+      height: 1em;
+    }
   }
 }
 
