--- a/app/components/player/overview.partial.html
+++ b/app/components/player/overview.partial.html
@@ -8,12 +8,14 @@
           <div class="player-info__sub">
             <div class="player-info__class" ng-bind="player.characterInfo.subclassName"></div>
             <div class="player-info__hazards">
-              <img ng-repeat="badge in player.charityIcons track by $index"
-                   ng-src="{{badge.status}}"
+              <span ng-repeat="badge in player.charityIcons track by $index"
                    data-template-url="shared/popovers/charity.popover.html"
                    data-placement="bottom"
-                   style="height: 100%;margin-left: 3px;margin-right: 5px;" bs-popover>
-              <span ng-repeat="badge in player.badges | limitTo:2 track by $index"
+                   class="player-hazard player-hazard--donator"
+                   bs-popover>
+                   <img ng-src="{{badge.status}}"/>
+              </span><!--
+              --><span ng-repeat="badge in player.badges | limitTo:2 track by $index"
                     ng-if="$index < 2"
                     ng-bind="badge.status || badge.text"
                     class="player-hazard"
@@ -22,8 +24,8 @@
                     data-placement="bottom"
                     ng-mouseover="johnCena(badge.status)"
                     ng-click="johnCena(badge.status)" bs-popover>
-              </span>
-              <span ng-if="player.totalBadges > 2"
+              </span><!--
+              --><span ng-if="player.totalBadges > 2"
                        class="player-hazard player-hazard--more"
                        bs-popover
                        data-template-url="/shared/popovers/badgeOverflow.popover.html"
