--- a/app/components/player/overview.partial.html
+++ b/app/components/player/overview.partial.html
@@ -86,7 +86,7 @@
       <span ng-if="!$storage.rating || $storage.rating === 'mmr'">
         <span ng-bind="(player.mmr.rating | number:0) || 'N/A'" data-template-url="shared/popovers/trnMMR.popover.html" bs-popover></span>
         <span>
-          <a href="https://destinytracker.com" target="_blank"
+          <a href="http://destinytracker.com/Forums/Post/25399/2/destiny-mmr" target="_blank"
              data-content="MMR stands for 'Matchmaking Rating', and is being developed by DestinyTracker as a more precise alternative to Elo." bs-popover>
             <i class="material-icons icon--small">&#xE8FD;</i>
           </a>
