--- a/app/components/maps/maps.html
+++ b/app/components/maps/maps.html
@@ -45,6 +45,53 @@
         <div class="row" ng-if="currentMapInfo">
           <div class="col-xs-12 col-sm-2">
             <h3 class="stat-header">
+              Ability usage by type
+            </h3>
+            <span data-content="Percentages are based on usage of weapon types in relation to total kills in their category.<hr />Difference to the average represents how much more or less that specific weapon type is used on {{currentMapInfo.name || 'this map'}} in relation to all other Trials of Osiris maps since the latest balance update." bs-popover>
+              <i class="material-icons icon--small info">&#xE8FD;</i>
+            </span>
+          </div>
+          <div class="col-xs-12 col-sm-10">
+            <div class="top-weapons--map">
+              <div class="row">
+                <div class="col-xs-3 col-sm-3">
+                  <label class="top-weapons__label">
+                    Abilites
+                  </label>
+                </div>
+                <div class="col-xs-3 col-sm-3 stat">
+                  <label>Kills</label>
+                </div>
+                <div class="col-xs-3 col-sm-3 stat">
+                  <label>Diff. to avg</label>
+                </div>
+                <div class="col-xs-3 col-sm-3 stat">
+                  <label>% of total kills</label>
+                </div>
+              </div>
+              <div class="row top-weapons--map__row" ng-repeat="ability in abilitySummary track by $index">
+                <div class="col-xs-3 col-sm-3">
+                  <span ng-bind="ability.name"></span>
+                </div>
+                <div class="col-xs-3 col-sm-3 stat">
+                  <span ng-bind="ability.killPercentage | number:2"></span>%
+                </div>
+                <div class="col-xs-3 col-sm-3 stat"
+                     ng-class="{'success': ability.diffPercentage > 0, 'fail': ability.diffPercentage < 0}">
+                  <i class="material-icons" ng-bind="ability.diffPercentage > 0 ? '&#xE5CE;' : '&#xE5CF;'"></i>
+                  <span ng-bind="ability.diffPercentage | number:2"></span>%
+                </div>
+                <div class="col-xs-3 col-sm-3 stat">
+                  <span ng-bind="ability.percentOfTotal | number:2"></span>%
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <hr>
+        <div class="row" ng-if="currentMapInfo">
+          <div class="col-xs-12 col-sm-2">
+            <h3 class="stat-header">
               Weapon usage by type
             </h3>
             <span data-content="Percentages are based on usage of weapon types in relation to total kills in their category.<hr />Difference to the average represents how much more or less that specific weapon type is used on {{currentMapInfo.name || 'this map'}} in relation to all other Trials of Osiris maps since the latest balance update." bs-popover>
