--- a/app/components/player/specific-stats.partial.html
+++ b/app/components/player/specific-stats.partial.html
@@ -15,7 +15,7 @@
 			    <div class="col-xs-6">
 			      <img class="weapon-type-icon img-responsive"
 			           ng-src="{{'assets/img/weapon-icons/' + weapon.file_name}}"
-			           alt="{{weapon.itemTypeName}}"><!-- this isn't translated -->
+			           alt="{{weapon.name}}"><!-- this isn't translated -->
 			    </div>
 			    <div class="col-xs-3">
 			      <span ng-bind="weapon.sum_kills"></span>
@@ -24,8 +24,8 @@
 			      <span ng-bind="(weapon.sum_headshots / weapon.sum_kills) * 100 | number:2"></span>%
 			    </div>
 			  </div>
-			  <div ng-if="player.lastWeapons.length < 3">
-			    <div class="row player-this-week__weapons" ng-if="player.lastWeapons.length < 3">
+			  <div ng-if="player.lastWeapons.length < 2">
+			    <div class="row player-this-week__weapons" ng-if="player.lastWeapons.length < 2">
 			      <div class=" col-xs-6">
 			        <img class="weapon-type-icon img-responsive"
 			             src="assets/img/weapon-icons/sniper-rifle.svg"
@@ -51,19 +51,19 @@
 			        0
 			      </div>
 			    </div>
-			    <div class="row player-this-week__weapons" ng-if="player.lastWeapons.length < 1">
-			      <div class=" col-xs-6">
-			        <img class="weapon-type-icon img-responsive"
-			             src="assets/img/weapon-icons/sidearm.svg"
-			             alt="{{'weaponKillsSideArm' | translate}}">
-			      </div>
-			      <div class="col-xs-3">
-			        0
-			      </div>
-			      <div class="col-xs-3">
-			        0
-			      </div>
-			    </div>
+			    <!--<div class="row player-this-week__weapons" ng-if="player.lastWeapons.length < 1">-->
+			      <!--<div class=" col-xs-6">-->
+			        <!--<img class="weapon-type-icon img-responsive"-->
+			             <!--src="assets/img/weapon-icons/sidearm.svg"-->
+			             <!--alt="{{'weaponKillsSideArm' | translate}}">-->
+			      <!--</div>-->
+			      <!--<div class="col-xs-3">-->
+			        <!--0-->
+			      <!--</div>-->
+			      <!--<div class="col-xs-3">-->
+			        <!--0-->
+			      <!--</div>-->
+			    <!--</div>-->
 			  </div>
 			  <div class="row">
 			    <div class=" col-xs-6">
@@ -77,6 +77,30 @@
 			    </div>
 			  </div>
 			</div>
+      <div class="player-tab__section">
+        <div ng-if="player.lastAbilities">
+          <div class="row">
+            <div class="col-xs-3" ng-bind="player.lastAbilities.melee"></div>
+            <div class="col-xs-3" ng-bind="player.lastAbilities.supers"></div>
+            <div class="col-xs-3" ng-bind="player.lastAbilities.grenade"></div>
+            <div class="col-xs-3" ng-bind="player.lastAbilities.sticky"></div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-3">
+            <div class="data-label">MELEE</div>
+          </div>
+          <div class="col-xs-3">
+            <div class="data-label">SUPER</div>
+          </div>
+          <div class=" col-xs-3">
+            <div class="data-label">GRENADE</div>
+          </div>
+          <div class="col-xs-3">
+            <div class="data-label">STICKY</div>
+          </div>
+        </div>
+      </div>
 			<div class="player-tab__section"
 					 ng-show="$storage.visibility.all || $storage.visibility.weekly.stats">
 		    <div class="row">
