--- a/app/components/stats/weapons.partial.html
+++ b/app/components/stats/weapons.partial.html
@@ -9,25 +9,21 @@
           <div class="col-xs-2 stat">
             <img class="last-match-weapon__img img-responsive" ng-src="{{getWeaponByHash(weapon.weaponId).icon}}" bs-popover data-content="{{getWeaponByHash(weapon.weaponId).name}}">
           </div>
-          <div class="col-xs-2 stat">
+          <div class="col-xs-3 stat">
             <span ng-bind="(weapon.kills | number:0) || 0"></span>
             <label translate="kills"></label>
           </div>
-          <div class="col-xs-2 stat">
+          <div class="col-xs-3 stat">
             <span ng-bind="(weapon.headshots | number:0) || 0"></span>
-            <label>HS</label>
+            <label>HEADSHOTS</label>
           </div>
           <div class="col-xs-2 stat">
             <span ng-bind="(weapon.precision | number:0) + '%' || 'N/A'"></span>
-            <label>Acc</label>
-          </div>
-          <div class="col-xs-2 stat">
-            <span ng-bind="(weapon.win_percentage | number:0) + '%' || 'N/A'"></span>
-            <label>Win %</label>
+            <label>ACC</label>
           </div>
           <div class="col-xs-2 stat">
             <span ng-bind="(weapon.total_matches | number:0) || 0"></span>
-            <label>Games</label>
+            <label>MATCHES</label>
           </div>
         </div>
       </div>
