--- a/app/components/player/overview.partial.html
+++ b/app/components/player/overview.partial.html
@@ -15,11 +15,16 @@
                    bs-popover>
                    <img ng-src="{{badge.status}}"/>
               </span><!--
+              -->
+              <span class="player-hazard player-hazard--sherpa" data-count="3">
+                Sherpa<!-- TODO: REMOVE THIS-->
+              </span><!--
               --><span ng-repeat="badge in player.badges | limitTo:2 track by $index"
                     ng-if="$index < 2"
                     ng-bind="badge.status || badge.text"
                     class="player-hazard"
                     ng-class="badge.htmlClass"
+                    data-count="{{badge.count}}"
                     data-template-url="shared/popovers/charity.popover.html"
                     data-placement="bottom"
                     ng-mouseover="johnCena(badge.status)"
