--- a/app/assets/css/parts/_player-hazards.scss
+++ b/app/assets/css/parts/_player-hazards.scss
@@ -49,12 +49,12 @@
   padding-right: 0;
 
   &:after {
-    content: attr(data-count) "x";
+    content: attr(data-count);
     padding: 1px 3px 1px;
     margin-top: -1px;
     margin-bottom: -1px;
     border-radius: 0 3px 3px 0;
-    background: transparentize(#E65100, 0.8);
+    background: transparentize(#E65100, 0.85);
     color: #E65100;
     display: inline-block;
   }
