--- a/app/assets/css/inc/_colors.scss
+++ b/app/assets/css/inc/_colors.scss
@@ -18,6 +18,7 @@ $maps-background: #E0F2F1;
 $this-week-background: #E0F2F1;
 $map-based-background: #E0F7FA;
 $challenge-background: #E0F2F1;
+$sherpa-color: #FF6F00;
 
 $header-bg: $main-dark;
 $footer-bg: $main-dark;
