--- a/app/assets/css/parts/_player-hazards.scss
+++ b/app/assets/css/parts/_player-hazards.scss
@@ -50,9 +50,10 @@
 
   &:after {
     content: attr(data-count);
-    padding: 1px 3px 1px;
+    padding: 1px 3px 1px 2px;
     margin-top: -1px;
     margin-bottom: -1px;
+    margin-left: 2px;
     border-radius: 0 3px 3px 0;
     background: transparentize($sherpa-color, 0.85);
     color: $sherpa-color;
