--- a/app/components/maps/maps.html
+++ b/app/components/maps/maps.html
@@ -297,8 +297,8 @@
             </div>
           </div>
         </div>
-        <hr ng-if="currentMapInfo.currentWeek >= 78">
-        <div class="row" ng-if="currentMapInfo.currentWeek >= 78">
+        <hr ng-if="currentMapInfo.week >= 78">
+        <div class="row" ng-if="currentMapInfo.week >= 78">
           <div class="col-xs-12 col-sm-2">
             <h3 class="stat-header">
               The Official Trials Report "Get Everyone To The Lighthouse" Initiative
