--- a/app/components/player/overview.partial.html
+++ b/app/components/player/overview.partial.html
@@ -2,6 +2,11 @@
   <div class="player-header" ng-style="{'background-image':'url(\'' + player.emblem.background + '\')'}">
     <div class="player-header__title">
       <img class="player-header__emblem" ng-src="{{player.emblem.icon}}" alt="Emblem">
+      <a ng-if="player.twitch && player.twitch.isLive" ng-href="https://twitch.tv/{{player.twitch.identifier}}"
+         type="button" target="_blank" style="position: absolute;left: 225px;top: 15px;padding: 0;margin: 0;"
+         analytics-on analytics-event="Click" analytics-category="Twitch">
+        <img src="/assets/img/twitch-live.svg" alt="Twitch" style="width: 55px;">
+      </a>
       <div class="player-header__char">
         <div class="player-info">
           <h2 class="player-header__gamertag" ng-bind="player.name"></h2>
