--- a/app/assets/css/main.scss
+++ b/app/assets/css/main.scss
@@ -168,14 +168,14 @@
   }
 }
 
-@keyframes blink {
+/*@keyframes blink {
   0% { color: rgba(255, 255, 255, 0.5); }
   100% { color: rgba(255, 255, 255, 1); }
 }
 @-webkit-keyframes blink {
   0% { color: rgba(255, 255, 255, 0.5); }
   100% { color: rgba(255, 255, 255, 1); }
-}
+}*/
 
 .realtime__flag {
   background: #FDD835;
