--- a/app/components/player/overview.partial.html
+++ b/app/components/player/overview.partial.html
@@ -2,11 +2,6 @@
   <div class="player-header" ng-style="{'background-image':'url(\'' + player.emblem.background + '\')'}">
     <div class="player-header__title">
       <img class="player-header__emblem" ng-src="{{player.emblem.icon}}" alt="Emblem">
-      <a ng-if="player.twitch && player.twitch.isLive" ng-href="https://twitch.tv/{{player.twitch.identifier}}"
-         type="button" target="_blank" style="position: absolute;left: 225px;top: 15px;padding: 0;margin: 0;"
-         analytics-on analytics-event="Click" analytics-category="Twitch">
-        <img src="/assets/img/twitch-live.svg" alt="Twitch" style="width: 55px;">
-      </a>
       <div class="player-header__char">
         <div class="player-info">
           <h2 class="player-header__gamertag" ng-bind="player.name"></h2>
@@ -59,7 +54,14 @@
   <div class="row">
     <div class="player-quick-look__form col-xs-9" ng-if="!player.errorStatus">
       <div class="player-quick-look__form__matches" trials-history="player.activities.lastTwentyFive" player-kd="player.stats.killsDeathsRatio.basic.value"></div>
-      <label class="data-label" translate="RECENT"></label>
+      <label class="data-label">
+        <span translate="RECENT"></span>
+        <a ng-if="player.twitch && player.twitch.isLive" ng-href="https://twitch.tv/{{player.twitch.identifier}}"
+           type="button" target="_blank" class="player__twitch"
+           analytics-on analytics-event="Click" analytics-category="Twitch">
+           <span class="player__twitch-dot"></span> <img src="/assets/img/twitch-icon.svg" alt="Twitch">&nbsp;&nbsp;Live now
+        </a>
+      </label>
     </div>
     <div class="player-quick-look__form col-xs-9" ng-if="!player.activities.lastTwentyFive && player.errorStatus">
       <div class="message message--warning"
