--- a/app/components/player/specific-stats.partial.html
+++ b/app/components/player/specific-stats.partial.html
@@ -51,19 +51,19 @@
 			        0
 			      </div>
 			    </div>
-			    <!--<div class="row player-this-week__weapons" ng-if="player.lastWeapons.length < 1">-->
-			      <!--<div class=" col-xs-6">-->
-			        <!--<img class="weapon-type-icon img-responsive"-->
-			             <!--src="assets/img/weapon-icons/sidearm.svg"-->
-			             <!--alt="{{'weaponKillsSideArm' | translate}}">-->
-			      <!--</div>-->
-			      <!--<div class="col-xs-3">-->
-			        <!--0-->
-			      <!--</div>-->
-			      <!--<div class="col-xs-3">-->
-			        <!--0-->
-			      <!--</div>-->
-			    <!--</div>-->
+			    <div class="row player-this-week__weapons" ng-if="player.lastWeapons.length < 1">
+			      <div class=" col-xs-6">
+			        <img class="weapon-type-icon img-responsive"
+			             src="assets/img/weapon-icons/sidearm.svg"
+			             alt="{{'weaponKillsSideArm' | translate}}">
+			      </div>
+			      <div class="col-xs-3">
+			        0
+			      </div>
+			      <div class="col-xs-3">
+			        0
+			      </div>
+			    </div>
 			  </div>
 			  <div class="row">
 			    <div class=" col-xs-6">
